examples/test/testpolicy19363.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19363
  namespace: namespace484
spec:
  podSelector:
    matchLabels:
      key21: value40
      key42: value26
      key6: value4
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value16
          key24: value27
          key49: value14
      podSelector:
        matchLabels:
          key8: value43
